login, save auth status to session

--- a/views/shared/includes/header.ejs
+++ b/views/shared/includes/header.ejs
@@ -1,6 +1,10 @@
 <header>
   <div><a href="/">Yu Online Shop</a></div>
   <nav>
-
+    <ul>
+      <% if(locals.isAuth) { %>
+        <li><button>Logout</button></li>
+        <% } %>
+    </ul>
   </nav>
 </header>
