--- a/views/customer/auth/login.ejs
+++ b/views/customer/auth/login.ejs
@@ -17,6 +17,7 @@
             <label for="password">Password</label>
             <input value="" name="password" type="password" required minLength="6" />
           </div>
+          <button class="btn">Login</button>
           <p id="switch-form"><a href="/signup">Create a new user</a></p>
         </form>
       </main>
