--- a/public/styles/base.css
+++ b/public/styles/base.css
@@ -76,3 +76,20 @@ a {
   background-color: var(--color-primary-700);
   border-color: var(--color-primary-700);
 }
+
+.alert {
+  background-color: var(--color-error-100);
+  color: var(--color-error-500);
+  border-radius: var(--border-radius-small);
+  padding: var(--space-4);
+}
+
+.alert h2 {
+  font-size: 1rem;
+  margin: var(--space-2) 0;
+  text-transform: uppercase;
+}
+
+.alert p {
+  margin: var(--space-2) 0;
+}
