--- a/views/customer/auth/login.ejs
+++ b/views/customer/auth/login.ejs
@@ -7,18 +7,26 @@
     <%- include('../../shared/includes/header') %>
       <main>
         <h1>Login</h1>
-        <form action="/login" method="POST">
-          <input type="hidden" name="_csrf" value="<%= locals.csrfToken %>" />
-          <div>
-            <label for="email">Email</label>
-            <input value="" name="email" type="email" required />
-          </div>
-          <div>
-            <label for="password">Password</label>
-            <input value="" name="password" type="password" required minLength="6" />
-          </div>
-          <button class="btn">Login</button>
-          <p id="switch-form"><a href="/signup">Create a new user</a></p>
-        </form>
+        <% if(sessionData.errorMsg) { %>
+          <section class="alert">
+            <h2>Invalid Credentials</h2>
+            <p>
+              <%= sessionData.errorMsg %>
+            </p>
+          </section>
+          <% } %>
+            <form action="/login" method="POST">
+              <input type="hidden" name="_csrf" value="<%= locals.csrfToken %>" />
+              <div>
+                <label for="email">Email</label>
+                <input value="<%= sessionData.email %>" name="email" type="email" required />
+              </div>
+              <div>
+                <label for="password">Password</label>
+                <input value="<%= sessionData.password %>" name="password" type="password" required />
+              </div>
+              <button class="btn">Login</button>
+              <p id="switch-form"><a href="/signup">Create a new user</a></p>
+            </form>
       </main>
       <%- include('../../shared/includes/footer') %>
