--- a/views/customer/auth/signup.ejs
+++ b/views/customer/auth/signup.ejs
@@ -7,39 +7,48 @@
     <%- include('../../shared/includes/header') %>
       <main>
         <h1>Create New Account</h1>
-        <form action="/signup" method="POST">
-          <input type="hidden" name="_csrf" value="<%= locals.csrfToken %>" />
-          <div>
-            <label for="email">Email</label>
-            <input value="" name="email" type="email" required />
-          </div>
-          <div>
-            <label for="confirmEmail">Confirm Email</label>
-            <input value="" name="confirmEmail" type="email" required />
-          </div>
-          <div>
-            <label for="password">Password</label>
-            <input value="" name="password" type="password" required minLength="6" />
-          </div>
-          <hr>
-          <div>
-            <label for="fullname">Full Name</label>
-            <input value="" name="fullname" type="text" required />
-          </div>
-          <div>
-            <label for="street">Street</label>
-            <input value="" name="street" type="text" required />
-          </div>
-          <div>
-            <label for="postal">Postal Code</label>
-            <input value="" name="postal" type="text" required minlength="5" maxlength="5" />
-          </div>
-          <div>
-            <label for="city">City</label>
-            <input value="" name="city" type="text" required />
-          </div>
-          <button class="btn">Create Account</button>
-          <p id="switch-form"><a href="/login">Go to Login</a></p>
-        </form>
+        <% if(sessionData.errorMsg) { %>
+          <section class="alert">
+            <h2>Invalid input</h2>
+            <p>
+              <%= sessionData.errorMsg %>
+            </p>
+          </section>
+          <% } %>
+            <form action="/signup" method="POST">
+              <input type="hidden" name="_csrf" value="<%= locals.csrfToken %>" />
+              <div>
+                <label for="email">Email</label>
+                <input value="<%= sessionData.email %>" name="email" type="email" required />
+              </div>
+              <div>
+                <label for="confirmEmail">Confirm Email</label>
+                <input value="<%= sessionData.confirmEmail %>" name="confirmEmail" type="email" required />
+              </div>
+              <div>
+                <label for="password">Password</label>
+                <input value="<%= sessionData.password %>" name="password" type="password" required minLength="6" />
+              </div>
+              <hr>
+              <div>
+                <label for="fullname">Full Name</label>
+                <input value="<%= sessionData.fullname %>" name="fullname" type="text" required />
+              </div>
+              <div>
+                <label for="street">Street</label>
+                <input value="<%= sessionData.street %>" name="street" type="text" required />
+              </div>
+              <div>
+                <label for="postal">Postal Code</label>
+                <input value="<%= sessionData.postal %>" name="postal" type="text" required minlength="5"
+                  maxlength="5" />
+              </div>
+              <div>
+                <label for="city">City</label>
+                <input value="<%= sessionData.city %>" name="city" type="text" required />
+              </div>
+              <button class="btn">Create Account</button>
+              <p id="switch-form"><a href="/login">Go to Login</a></p>
+            </form>
       </main>
       <%- include('../../shared/includes/footer') %>
