isAdmin, responsive nav bar

--- a/views/shared/includes/head.ejs
+++ b/views/shared/includes/head.ejs
@@ -9,3 +9,5 @@
     <%= pageTitle %>
   </title>
   <link rel="stylesheet" href="/styles/base.css">
+  <link rel="stylesheet" href="/styles/navigation.css">
+  <script src="/scripts/mobile.js" defer></script>
