--- a/public/styles/base.css
+++ b/public/styles/base.css
@@ -77,6 +77,16 @@ a {
   border-color: var(--color-primary-700);
 }
 
+.btn-alt {
+  background-color: transparent;
+  color: var(--color-primary-500);
+}
+
+.btn-alt:hover,
+.btn-alt:active {
+  background-color: var(--color-primary-500-bg);
+}
+
 .alert {
   background-color: var(--color-error-100);
   color: var(--color-error-500);
