--- a/views/admin/products/all-products.ejs
+++ b/views/admin/products/all-products.ejs
@@ -10,7 +10,13 @@
           <p><a href="/admin/products/new" class="btn">Add Product</a></p>
         </section>
         <section>
-          <p>list of products</p>
+          <ul>
+            <% for (const product of products) { %>
+              <li>
+                <%- include('includes/product-item', {product}) %>
+              </li>
+              <% } %>
+          </ul>
         </section>
 
       </main>
