--- a/views/admin/products/all-products.ejs
+++ b/views/admin/products/all-products.ejs
@@ -1,4 +1,5 @@
 <%- include('../../shared/includes/head', {pageTitle: 'All Products' }) %>
+  <link rel="stylesheet" href="/styles/products.css">
   </head>
 
   <body>
@@ -10,7 +11,7 @@
           <p><a href="/admin/products/new" class="btn">Add Product</a></p>
         </section>
         <section>
-          <ul>
+          <ul id="products-grid">
             <% for (const product of products) { %>
               <li>
                 <%- include('includes/product-item', {product}) %>
