--- a/views/admin/products/new-product.ejs
+++ b/views/admin/products/new-product.ejs
@@ -6,32 +6,7 @@
     <%- include('../../shared/includes/header') %>
       <main>
         <h1>Add new Product</h1>
-        <form action="/admin/products?_csrf=<%= locals.csrfToken %>" method="POST" enctype="multipart/form-data">
-          <p>
-            <label for="title">Title</label>
-            <input id="title" name="title" value="" required type="text">
-          </p>
-          <p>
-            <label for="image">Image</label>
-            <input id="image" name="image" value="" accept="image/png, image/jpg" type="file">
-          </p>
-          <p>
-            <label for="summary">Summary</label>
-            <input id="summary" name="summary" value="" required type="text" maxlength="200">
-          </p>
-          <p>
-            <label for="price">Price</label>
-            <input id="price" name="price" value="" required type="number" min="0.01" step="0.01">
-          </p>
-          <p>
-            <label for="description">Description</label>
-            <textarea name="description" id="description" rows="10" required></textarea>
-          </p>
-          <p>
-            <button type="reset" class="btn btn-alt">Reset</button>
-            <button class="btn">Save</button>
-          </p>
-        </form>
-
+        <%- include('includes/product-form', {submitPath: '/admin/products' , product: { title: '' , summary: '' ,
+          price: '' , description: '' }, imageRequired: true}) %>
       </main>
       <%- include('../../shared/includes/footer') %>
